@@ -15,6 +15,8 @@
 	update: introduce icons for routers and SLB
 	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
 	bugfix: show error message for duplicate IPv4 network record
+	bugfix: it was possible to access the system as any existing
+		LDAP user w/o his password (reported by Igor Shishkin)
 0.16.4 2008-11-04
 	bugfix: display VS/RS config block in RS pool view
 	bugfix: resolve tabindex issues in many forms
